# vmod

./: .gitignore  build.sh  build_l4d2.sh  build_p2.sh  build_shared.sh  build_tf2.sh  meson.build  meson_options.txt  x86-linux-gnu
src/: convar.cpp  convar.hpp  convar.tpp  ffi.cpp  ffi.hpp  filesystem.cpp  filesystem.hpp  gsdk.cpp  gsdk.hpp  gsdk.tpp  gsdk_library.cpp  gsdk_library.hpp  hacking.cpp  hacking.hpp  hacking.tpp  libiberty.hpp  main.cpp  main.hpp  mod.cpp  mod.hpp  platform.hpp  plugin.cpp  plugin.hpp  plugin.tpp  preprocessor.cpp  preprocessor.hpp  program.sh  signature_guesser.cpp  symbol_cache.cpp  symbol_cache.hpp  type_traits.hpp  vmod.cpp  vmod.hpp  vmod_base.nut  vmod_server_init.nut  vscript.cpp  vscript.hpp  vscript.tpp  vscript_variant.cpp  vscript_variant.tpp  (+7 more)
src/bindings/: docs.cpp  docs.hpp  instance.cpp  instance.hpp  singleton.cpp  singleton.hpp
src/bindings/cvar/: bindings.cpp  bindings.hpp  concommand.cpp  concommand.hpp  convar.cpp  convar.hpp  singleton.cpp  singleton.hpp
src/bindings/ent/: bindings.cpp  bindings.hpp  datamap.cpp  datamap.hpp  factory.cpp  factory.hpp  sendprop.cpp  sendprop.hpp  sendtable.cpp  sendtable.hpp  serverclass.cpp  serverclass.hpp  singleton.cpp  singleton.hpp
src/bindings/ffi/: bindings.cpp  bindings.hpp  cif.cpp  cif.hpp  detour.cpp  detour.hpp  singleton.cpp  singleton.hpp
src/bindings/fs/: bindings.cpp  bindings.hpp  singleton.cpp  singleton.hpp
src/bindings/mem/: bindings.cpp  bindings.hpp  container.cpp  container.hpp  singleton.cpp  singleton.hpp
src/bindings/net/: bindings.cpp  bindings.hpp  mysql.cpp  mysql.hpp  singleton.cpp  singleton.hpp
src/bindings/strtables/: bindings.cpp  bindings.hpp  singleton.cpp  singleton.hpp  string_table.cpp  string_table.hpp
src/bindings/syms/: bindings.cpp  bindings.hpp  singleton.cpp  singleton.hpp
src/bindings/vmod/: mod.cpp  plugin.cpp  singleton.cpp
src/gsdk/: config.hpp  string_t.hpp
src/gsdk/engine/: dt_common.hpp  dt_send.cpp  dt_send.hpp  edict.hpp  globalvars.hpp  stringtable.hpp  sv_engine.hpp  sys_dll.hpp  vsp.cpp  vsp.hpp  workshop.hpp
src/gsdk/filesystem/: filesystem.hpp
src/gsdk/launcher/: launcher.hpp
src/gsdk/mathlib/: mathlib.hpp  vector.hpp
src/gsdk/server/: baseentity.cpp  baseentity.hpp  datamap.cpp  datamap.hpp  gamerules.hpp  gamesystem.hpp  server.cpp  server.hpp
src/gsdk/tier0/: commandline.hpp  dbg.hpp  memalloc.hpp  platform.hpp  threadtools.hpp
src/gsdk/tier1/: appframework.hpp  interface.hpp  utldict.hpp  utldict.tpp  utlmemory.hpp  utlmemory.tpp  utlstring.hpp  utlsymbol.hpp  utlvector.hpp  utlvector.tpp
src/gsdk/vscript/: vscript.cpp  vscript.hpp  vscript.tpp
src/gsdk/vstdlib/: convar.cpp  convar.hpp
src/squirrel/: vmod_base.nut  vmod_init_late.nut  vmod_server_init.nut  vmod_server_init_late.nut
src/syms/: makesig_data.idc  makesig_func.idc
src/syms/portal2/server/: server.so.yaml
src/syms/portal2/vscript/: vscript.so.yaml
src/vm/: squirrel_vm.cpp  squirrel_vm.hpp  vm_shared.cpp  vm_shared.hpp  vmod_init.nut
src/vm/sourcepawn/: vm.cpp  vm.hpp
src/vm/squirrel/: vm.cpp  vm.hpp  vmod_init.nut
src/vscript/: class_desc.hpp  function_desc.hpp  function_desc.tpp  singleton_class_desc.hpp  variant.cpp  variant.hpp  variant.tpp  vscript.cpp  vscript.hpp  vscript_internal.hpp
src/vscript/detail/: base_class_desc.hpp  base_class_desc.tpp
subprojects/: amtl.wrap  libiberty.wrap  quirrel.wrap  sourcepawn.wrap  squirrel.wrap  squirrel_223.wrap  squirrel_304.wrap  squirrel_320.wrap  tpp.wrap
subprojects/libiberty/: meson.build  meson_options.txt
subprojects/packagefiles/amtl/: meson.build
subprojects/packagefiles/libiberty/: meson.build
subprojects/packagefiles/sourcepawn/: meson.build  vmod_fixes.patch
subprojects/packagefiles/squirrel/: __protofix.h  meson.build  vmod_quirrel_fixes.patch
subprojects/packagefiles/tpp/: meson.build  vmod_fixes.patch
subprojects/steamworks/: meson.build
